--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
-workout.today_sets=Твоя тренировка на сегодня: {0}. Всего повторений — {1}.
-workout.max_reps=Тип упражнения: {0}\n\nПоздравляю, {1}!\nТвой новый максимум — {2}🔥\nВсего повторений — {3}💪🏻
+workout.today_sets=\u0422\u0432\u043E\u044F \u0442\u0440\u0435\u043D\u0438\u0440\u043E\u0432\u043A\u0430 \u043D\u0430 \u0441\u0435\u0433\u043E\u0434\u043D\u044F: {0}. \u0412\u0441\u0435\u0433\u043E \u043F\u043E\u0432\u0442\u043E\u0440\u0435\u043D\u0438\u0439 \u2014 {1}.
+workout.max_reps=\u0422\u0438\u043F \u0443\u043F\u0440\u0430\u0436\u043D\u0435\u043D\u0438\u044F: {0}\n\n\u041F\u043E\u0437\u0434\u0440\u0430\u0432\u043B\u044F\u044E, {1}!\n\u0422\u0432\u043E\u0439 \u043D\u043E\u0432\u044B\u0439 \u043C\u0430\u043A\u0441\u0438\u043C\u0443\u043C \u2014 {2}\uD83D\uDD25\n\u0412\u0441\u0435\u0433\u043E \u043F\u043E\u0432\u0442\u043E\u0440\u0435\u043D\u0438\u0439 \u2014 {3}\uD83D\uDCAA\uD83C\uDFFB
+workout.reps_recorded={0}: \u0441\u0434\u0435\u043B\u0430\u043D\u043E {1} \u043F\u043E\u0432\u0442\u043E\u0440\u0435\u043D\u0438\u0439. \u041E\u0431\u0449\u0435\u0435 \u0447\u0438\u0441\u043B\u043E: {2}.
