-fixed bug about user registration fail -changed response -added localization

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 workout.today_sets=Твоя тренировка на сегодня: {0}. Всего повторений — {1}.
 workout.max_reps=Тип упражнения: {0}\n\nПоздравляю, {1}!\nТвой новый максимум — {2}🔥\nВсего повторений — {3}💪🏻
 workout.reps_recorded={0}: сделано {1} повторений. Общее число: {2}.
+user.registered=Вы успешно зарегистрированы в системе.
