--- a/src/test-integration/resources/messages.properties
+++ b/src/test-integration/resources/messages.properties
@@ -3,13 +3,17 @@ workout.max_reps=Тип упражнения: {0}\n\nПоздравляю, {1}!\
 workout.reps_recorded={0}: сделано {1} повторений. Общее число: {2}.
 user.registered=Вы успешно зарегистрированы в системе.
 
-profile.name=📝Имя: {0}
-profile.age=📈Возраст: не указан
-profile.gender=🎭Пол: не указан
-profile.rank=⚔ Ранг: Жалкое млекопитающее 🐒
-profile.achievements=🏆 Достижения: ещё впереди 🚀
-profile.notificationTime=⏰ Время тренировки: {0}
-profile.push-ups=отжиманий: {0}/{1}
-profile.pullups=подтягиваний: {0}/{1}
-profile.squats=приседаний: {0}/{1}
-profile.status=📊Сегодня тренируем силу воли 💪
+profile.template=\
+📝 Имя: {0}\n\
+📈 Возраст: не указан\n\
+🎭 Пол: не указан\n\
+⚔  Ранг: Жалкое млекопитающее 🐒\n\
+🏆 Достижения: ещё впереди 🚀\n\
+⏰ Время тренировки: {1}\n\
+\n\
+Всего/максимум\n\
+* отжиманий: {2}/{3}\n\
+* подтягиваний: {4}/{5}\n\
+* приседаний: {6}/{7}\n\
+\n\
+📊 Статус: Сегодня тренируем силу воли 💪
