--- a/src/test-integration/resources/messages.properties
+++ b/src/test-integration/resources/messages.properties
@@ -1,2 +1,19 @@
 workout.today_sets=Твоя тренировка на сегодня: {0}. Всего повторений — {1}.
 workout.max_reps=Тип упражнения: {0}\n\nПоздравляю, {1}!\nТвой новый максимум — {2}🔥\nВсего повторений — {3}💪🏻
+workout.reps_recorded={0}: сделано {1} повторений. Общее число: {2}.
+user.registered=Вы успешно зарегистрированы в системе.
+
+profile.template=\
+📝 Имя: {0}\n\
+📈 Возраст: не указан\n\
+🎭 Пол: не указан\n\
+⚔  Ранг: Жалкое млекопитающее 🐒\n\
+🏆 Достижения: ещё впереди 🚀\n\
+⏰ Время тренировки: {1}\n\
+\n\
+Всего/максимум\n\
+* отжиманий: {2}/{3}\n\
+* подтягиваний: {4}/{5}\n\
+* приседаний: {6}/{7}\n\
+\n\
+📊 Статус: Сегодня тренируем силу воли 💪
