implemented a ranks system

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,15 @@
 workout.today_sets=Твоя тренировка на сегодня: {0}. Всего повторений — {1}.
 workout.max_reps=Тип упражнения: {0}\n\nПоздравляю, {1}!\nТвой новый максимум — {2}🔥\nВсего повторений — {3}💪🏻
 workout.reps_recorded={0}: сделано {1} повторений. Общее число: {2}.
+workout.rank_promoted=\nПоздравляю! Твой ранг повышен: {0} → {1}
+workout.rank_next_left=\nДо следующего ранга осталось повторений: {0} .
 user.registered=Вы успешно зарегистрированы в системе.
 
 profile.template=\
 📝 Имя: {0}\n\
 📈 Возраст: не указан\n\
 🎭 Пол: не указан\n\
-⚔  Ранг: Жалкое млекопитающее 🐒\n\
+⚔  Ранг: {8}\n\
 🏆 Достижения: ещё впереди 🚀\n\
 ⏰ Время тренировки: {1}\n\
 \n\
